default/objects/E2E_Ru_Product_Settings__c/E2E_Ru_Product_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>E2E Ru Product Settings</label>
</CustomObject>