default/objects/E2E_Ru_Product_Settings__c/fields/Chosen_Contract__c.field-meta.xml
<CustomField>
    <fullName>Chosen_Contract__c</fullName>
    <label>Chosen Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>