default/objects/E2E_Ru_Product_Settings__c/fields/Light_Card__c.field-meta.xml
<CustomField>
    <fullName>Light_Card__c</fullName>
    <label>Light Card</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>