default/objects/E2E_Ru_Product_Settings__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>