default/objects/E2E_Ru_Product_Settings__c/fields/Super_Card__c.field-meta.xml
<CustomField>
    <fullName>Super_Card__c</fullName>
    <label>Super Card</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>